--- a/parts/cvsservice/commitdialogbase.ui
+++ b/parts/cvsservice/commitdialogbase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Commit to repository</string>
+        <string>Commit to Repository</string>
     </property>
     <property name="sizeGripEnabled">
         <bool>true</bool>
